--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@angular/platform-browser": "^10.0.6",
 		"@angular/platform-browser-dynamic": "^10.0.6",
 		"@angular/router": "^10.0.6",
+		"fomantic-ui": "^2.8.7",
 		"rxjs": "~6.5.5",
 		"tslib": "^2.0.0",
 		"zone.js": "~0.10.3"
@@ -39,7 +40,6 @@
 		"karma-jasmine": "~3.3.0",
 		"karma-jasmine-html-reporter": "^1.5.0",
 		"protractor": "~7.0.0",
-		"semantic-ui": "^2.4.2",
 		"ts-node": "~8.3.0",
 		"tslint": "~6.1.0",
 		"typescript": "~3.9.5"
