--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
 		"node": "10.*.*",
 		"npm": "6.*.*"
 	},
-	"cacheDirectories": ["libs\\semantic", "node_modules"]
+	"cacheDirectories": ["libs\\semantic"]
 }
