--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "libs/semantic/dist/semantic.min.css"
             ],
             "scripts": [
               "libs/semantic/dist/semantic.min.js"
