--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@angular/platform-browser-dynamic": "^10.0.6",
 		"@angular/router": "^10.0.6",
 		"fomantic-ui": "^2.8.7",
+		"gulp": "^4.0.2",
 		"rxjs": "~6.5.5",
 		"tslib": "^2.0.0",
 		"zone.js": "~0.10.3"
