--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@angular/platform-browser-dynamic": "^10.0.6",
 		"@angular/router": "^10.0.6",
 		"fomantic-ui": "^2.8.7",
-		"gulp": "^4.0.2",
+		"gulp-header": "1.8.2",
 		"rxjs": "~6.5.5",
 		"tslib": "^2.0.0",
 		"zone.js": "~0.10.3"
@@ -49,5 +49,7 @@
 		"node": "10.*.*",
 		"npm": "6.*.*"
 	},
-	"cacheDirectories": ["libs\\semantic"]
+	"cacheDirectories": [
+		"libs\\semantic"
+	]
 }
